ci(lint): enabled for all contents.

--- a/.github/workflows/textlnt.yaml
+++ b/.github/workflows/textlnt.yaml
@@ -26,5 +26,4 @@ jobs:
       - name: Run textlint
         run: |
           export PATH="$PATH:$(npm root)/.bin"
-          textlint README.md
-          # textlint README.md ./contents/**/*.md
+          textlint README.md ./contents/**/*.md
