--- a/_typos.toml
+++ b/_typos.toml
@@ -2,7 +2,9 @@
 # // spellchecker:disable-line を行末に入れるとチェックを回避
 extend-ignore-re = [
     "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
-    "hvs\\.[a-zA-Z0-9_-]+"
+    "hvs\\.[a-zA-Z0-9_-]+",
+    "[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}",
+    "[a-zA-Z0-9]{15,}"
 ]
 
 [default.extend-words]
