--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Install textlint rules
-        run: npm install textlint textlint-rule-preset-ja-spacing textlint-rule-preset-japanese
+      - name: Install textlint and rules
+        run: |
+          if [ ! -f package.json ]; then npm init -y; fi
+
+          npm install textlint \
+                      textlint-rule-ja-space-between-half-and-full-width \
+                      textlint-rule-terminology
 
       - name: Run textlint
-        run: npx textlint --config .textlintrc.json '**/*.md'
+        run: npx textlint --config .textlintrc.json "**/*.md"
