fix permission issue for sync-commit-messages.yaml

--- a/.github/workflows/sync-commit-messages.yaml
+++ b/.github/workflows/sync-commit-messages.yaml
@@ -7,6 +7,7 @@ on:
 permissions:
   contents: read
   pull-requests: write
+  issues: write
 
 jobs:
   sync-commit-messages:
@@ -14,7 +15,7 @@ jobs:
     steps:
       # https://github.com/actions/checkout
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
       # https://github.com/technote-space/pr-commit-body-action/tree/main
       - name: Pull Request Body
