--- a/.github/workflows/sync-commit-messages.yaml
+++ b/.github/workflows/sync-commit-messages.yaml
@@ -1,12 +1,14 @@
 name: Sync commit diff to PRs
 
 on:
-  pull_request:
+  pull_request_target:
+    types: [opened, synchronize, reopened, edited]
   workflow_dispatch:
 
 permissions:
   contents: read
   pull-requests: write
+  issues: write
 
 jobs:
   sync-commit-messages:
@@ -14,7 +16,9 @@ jobs:
     steps:
       # https://github.com/actions/checkout
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       # https://github.com/technote-space/pr-commit-body-action/tree/main
       - name: Pull Request Body
