--- a/.github/workflows/textlnt.yaml
+++ b/.github/workflows/textlnt.yaml
@@ -15,14 +15,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v6
+
+        uses: actions/setup-node@v4
         with:
-          node-version: '20.20.0'
+          node-version: '20'
+          cache: 'npm' 
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run textlint
-        run: |
-          npm install textlint textlint-rule-preset-ja-spacing
-          npx textlint README.md "./contents/**/*.md"
+        run: npm run lint
